# backend/src/routes.js
@@ -5,6 +5,7 @@ import categoryRoutes from './modules/categories/category.routes.js';
 import menuRoutes from './modules/menu/menu.routes.js';
 import tableRoutes from './modules/tables/table.routes.js';
 import orderRoutes from './modules/orders/order.routes.js';
+import promotionRoutes from './modules/promotions/promotion.routes.js';
 import paymentRoutes from './modules/payments/payment.routes.js';
 import reportRoutes from './modules/reports/report.routes.js';
 import settingsRoutes from './modules/settings/settings.routes.js';
@@ -18,6 +19,7 @@ router.use('/categories', categoryRoutes);
 router.use('/menu-items', menuRoutes);
 router.use('/tables', tableRoutes);
 router.use('/orders', orderRoutes);
+router.use('/promotions', promotionRoutes);
 router.use('/payments', paymentRoutes);
 router.use('/reports', reportRoutes);
 router.use('/settings', settingsRoutes);
